2. Design Patterns/1. Creational/Factory/Examples/1. MyPizza/Bad/MyPizza_Bad/MargheritaPizza.cs
namespace MyPizza_Bad
{
    internal class MargheritaPizza : Pizza
    {
    }
}